# QFS

./: .gitignore  Cargo.toml  README.md
example_inputs/root/: fs.yml
example_inputs/root/boot/: boot.arci
example_inputs/root/config/: permissions.yml
src/: lib.rs
tests/: basic.rs
