[package]
name = "quickfs"
version = "0.1.0"
edition = "2021"
description = "A fast FAT filesystem for use in ARCI and nonvolatile data"

[dependencies]
neutronapi = { git = "https://github.com/hyperswine/neutronapi", features = [
    "types",
    "interface",
] }
read_exact = "0.0.1"
bincode = { version = "2.0.0-rc.1", default-features = false, features = [
    "derive",
    "alloc",
] }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
zstd = { version = "0.11", optional = true }

[features]
default = ["compression"]
# meant to be used with an OS, dont link to lib
compression = ["zstd"]
